--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,7 +238,11 @@ img {
 .show-menu {
   bottom: 0;
 }
+
 /* Active link */
+.active-link {
+  color: var(--first-color);
+}
 
 /* Change background header */
 
@@ -926,24 +930,24 @@ img {
   margin-right: var(--mb-1-5);
 }
 
-.footer__social:hover{
-  color:var(--first-color-lighter);
+.footer__social:hover {
+  color: var(--first-color-lighter);
 }
 
-.footer__copy{
+.footer__copy {
   font-size: var(--smaller-font-size);
   text-align: center;
-  color:var(--text-color-light);
+  color: var(--text-color-light);
   margin-top: var(--mb-3);
 }
 
 .footer__title,
 .footer__subtitle,
 .footer__link,
-.footer__social{
-  color:#fff;
+.footer__social {
+  color: #fff;
 }
-}
+
 /*========== SCROLL UP ==========*/
 
 /* Show scroll */
